# openDMM_UT61Eplus

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: cmake-multi-platform.yml
doc/AT24C02/: 校准值.xlsx
doc/ES232/: ES232_WRITE_REG.xlsx
scripts/cmake/: arm-gcc-cortex-m0plus.cmake  arm-gcc-cortex-toolchain.cmake  binary.cmake  utilities.cmake
scripts/ld/: hc32l130.ld
scripts/shell/: build.bat  erase.bat  gen_mingw.bat  load.bat  rebuild.bat
source/: CMakeLists.txt
source/app/: CMakeLists.txt  ao_es232.c  ao_es232.h  ao_irda.c  ao_irda.h  ao_key.c  ao_key.h  ao_knob.c  ao_knob.h  ao_lcd.c  ao_lcd.h  ao_meter.c  ao_meter.h  app_button.c  app_button.h  app_config.c  app_config.h  app_knob.c  app_knob.h  app_sleep.c  app_sleep.h  bsp.c  bsp.h  key_button.c  key_button.h  knob_knob.c  knob_knob.h  main.c  main.h  meter_acv.c  meter_acv.h  meter_button.c  meter_button.h  meter_config.c  meter_config.h  meter_dcv.c  meter_dcv.h  meter_help_range.c  meter_help_range.h  meter_mode_a_ac.c  (+61 more)
source/boot/: CMakeLists.txt  boot.c  hc32l13x.h  startup.s  system_hc32l13x.c  system_hc32l13x.h
source/device/: CMakeLists.txt
source/device/base/: binary.h  bits.h
source/device/button/: CMakeLists.txt  multi_button.c  multi_button.h
source/device/eeprom/: CMakeLists.txt  eeprom.c  eeprom.h
source/device/es232/: CMakeLists.txt  es232.c  es232.h  es232_port.c  es232_port.h
source/device/hc32l130_lib/: CMakeLists.txt  clock.c  gpio.c  gpio.h  uart.c
source/device/hy2613/: CMakeLists.txt  hy2613.c  hy2613.h  hy2613_port.c  hy2613_port.h
source/device/irda/: CMakeLists.txt  irda.c  irda.h
source/device/lcd/: CMakeLists.txt  lcd.c  lcd.h  lcd_pixel.h
source/device/mcu/: CMakeLists.txt  delay.c  delay.h  gpio.c  gpio.h  io_config.h  rtc.c  rtc.h  sysctrl.c  sysctrl.h  uart.c  uart.h
source/device/si2c/: CMakeLists.txt  si2c.c  si2c.h
source/driver/: CMakeLists.txt
source/driver/buffer/: CMakeLists.txt  buffer.c  buffer.h
source/driver/irda/: CMakeLists.txt  irda.c  irda.h
source/driver/lcd/: CMakeLists.txt  lcd.c  lcd.h  lcd_pixel.h
source/driver/printf/: CMakeLists.txt  printf.c  printf.h  printf_config.h
source/driver/qpn/: CMakeLists.txt  qpn_conf.h
source/driver/qpn/include/: qassert.h  qepn.h  qfn.h  qkn.h  qpn.h  qstamp.c  qvn.h
source/driver/qpn/ports/arm-cm/qv/gnu/: qfn_port.h  qvn_port.c
source/driver/qpn/src/qfn/: qepn.c  qfn.c
source/driver/qpn/src/qvn/: qvn.c
source/driver/si2c/: CMakeLists.txt  si2c.c  si2c.h
source/driver/ulog/: CMakeLists.txt  ulog.c  ulog.h
source/tests/: CMakeLists.txt
source/tests/test_buffer/: CMakeLists.txt  test_buffer.c
source/tests/test_eeprom/: CMakeLists.txt  test_eeprom.c
source/tests/test_gpio/: CMakeLists.txt  test_gpio.c
source/tests/test_hy2613/: CMakeLists.txt  test_hy2613.c
source/tests/test_irda/: CMakeLists.txt  test_irda.c
source/tests/test_lcd/: CMakeLists.txt  test_lcd.c
source/tests/test_qpn/: CMakeLists.txt  blinky.c  blinky.h  bsp.c  bsp.h  test_qpn.c
source/tests/test_si2c/: CMakeLists.txt  test_si2c.c
source/tests/test_sysctrl/: CMakeLists.txt  test_sysctrl.c
source/tests/test_ulog/: CMakeLists.txt  test_ulog.c
tool/txt2bin/: DSLogic PLus-la-231111-175227.dsl  eeprom.txt  txt2bin.py
